SUBDIRS = classifier generator ipsec packet time timer l2fwd_simple switch ipsec_proto l3fwd reflector lpm-ipfwd p4_new
DIST_SUBDIRS = classifier generator ipsec packet time timer l2fwd_simple switch ipsec_proto l3fwd reflector lpm-ipfwd p4_new
if BUILD_DPAA2
SUBDIRS += kni_demo
DIST_SUBDIRS += kni_demo
if !BUILD_LS2080
SUBDIRS += cmdif_demo
DIST_SUBDIRS += cmdif_demo
endif
endif
